tests/bad/empty_format_string_expr.oc


def main() {
    let x = `hello: {}`
}